# home-control-panel

./: .gitignore  Cargo.toml  flake.nix
.github/workflows/: ci.yml
src/: app.rs  cli.rs  config.rs  gtk_ext.rs  logger.rs  main.rs  messaging.rs  prelude.rs  style.css  view.rs
src/calendar/: caldav.rs  calendar.rs  calendar_manager.rs  calendar_service.rs  date_manager.rs  event.rs  event_builder.rs  event_uuid.rs  extract.rs  grid_service.rs  manager.rs  map.rs  mod.rs  service.rs
src/components/: calendar.rs  calendar_event.rs  calendar_row.rs  calendar_selection.rs  event_list_day.rs  event_list_day_entry.rs  mod.rs  video.rs  video_v2.rs
src/icalendar/: calendar.rs  calendar_map.rs  event.rs  event_builder.rs  extract.rs  mod.rs  uid_map.rs
src/views/: mod.rs  screensaver.rs  video.rs
src/views/calendars/: day.rs  event.rs  mod.rs  month.rs  selection.rs  upcomming.rs
src/widgets/: grafana.rs  interaction_tracker.rs  mod.rs  screensaver.rs  video.rs  view.rs
src/widgets/calendar/: event.rs  mod.rs  selection.rs  upcoming.rs
src/widgets/calendar/day/: event_object.rs  mod.rs
src/widgets/calendar/month/: grid_day.rs  mod.rs
src/widgets/calendar_selection/: calendar.rs  mod.rs
src/widgets/day_calendar/: entry.rs  mod.rs
src/widgets/days_calendar/: day.rs  day_entry.rs  mod.rs
src/widgets/month_calendar/: day.rs  mod.rs
src/widgets/screensaver/: mod.rs
src/widgets/single_calendar/: mod.rs
src/widgets/video/: button.rs  mod.rs
src/widgets/week_calendar/: event.rs  mod.rs
src/widgets_bak/: interaction_tracker.rs
