[package]
name = "home-control-panel"
description = "A dashboard for my home"
license = "GPL-3.0"
readme = "README.md"
keywords = ["dashboard", "iced", "gstreamer", "icalendar"]
categories = ["desktop-application"]
repository = "https://github.com/cyl3x/home-control-panel"
authors = ["cyl3x <cyl3x@posteo.de>"]
version = "0.1.0"
edition = "2024"

[[bin]]
name = "home-control-panel"
path = "src/main.rs"

[profile.release]
codegen-units = 1
debug = false
lto = "fat"
opt-level = 3
strip = "debuginfo"

[dependencies]
base64 = "0.22"
chrono = { version = "0.4.39", features = ["unstable-locales", "serde"] }
chrono-tz = "=0.10.0"
clap = { version = "4.5.23", features = ["derive"] }
env_logger = "0.11.6"
glib = "0.20"
gstreamer = "0.23"
gstreamer-app = "0.23"
icalendar = "0.16.10"
iced = { version = "0.13", default-features = false, features = ["smol", "wgpu", "tiny-skia"] }
iced_font_awesome = "0.2.0"
iced_video_player = { git = "https://github.com/jazzfool/iced_video_player.git", rev = "24428186a3f931db4813e1078c3c66faa84e9c9a" }
iced_wgpu = "0.13"
log = { version = "0.4.22", features = ["kv", "kv_std"]}
rrule = "0.13.0"
serde = { version = "1.0.217", features = ["derive"] }
toml = "0.8.19"
ureq = "2.12.1"
url = { version = "2.5.4", features = ["serde"] }
uuid = { version = "1.11.0", features = ["v5", "serde"] }
xmltree = "0.11.0"
