[package]
name = "home-control-panel"
description = "A dashboard for my home"
license = "GPL-3.0"
readme = "README.md"
keywords = ["dashboard", "iced", "gstreamer", "icalendar"]
categories = ["desktop-application"]
repository = "https://github.com/cyl3x/home-control-panel"
authors = ["cyl3x <cyl3x@posteo.de>"]
version = "0.1.0"
edition = "2024"

[[bin]]
name = "home-control-panel"
path = "src/main.rs"

[profile.release]
codegen-units = 1
debug = false
lto = "fat"
opt-level = 3
strip = "debuginfo"

[dependencies]
base64 = "0.22"
chrono = { version = "0.4.39", features = ["unstable-locales", "serde"] }
chrono-tz = "0.10.4"
clap = { version = "4.5.53", features = ["derive"] }
env_logger = "0.11.8"
glib = "0.20"
gstreamer = "0.23"
gstreamer-app = "0.23"
icalendar = "0.17.6"
iced = { version = "0.14", default-features = false, features = ["smol", "wgpu", "tiny-skia"] }
iced_font_awesome = "0.4.1"
iced_video_player = { git = "https://github.com/jazzfool/iced_video_player.git", rev = "121b77de686d49e7bc768771b1a1c1c18f50c51f" }
iced_wgpu = "0.14.0"
log = { version = "0.4.29", features = ["kv", "kv_std"]}
rrule = "0.14"
serde = { version = "1.0.217", features = ["derive"] }
toml = "0.9.8"
ureq = "3.1.4"
url = { version = "2.5.7", features = ["serde"] }
uuid = { version = "1.19.0", features = ["v5", "serde"] }
xmltree = "0.12.0"
