[package]
name = "home-control-panel"
description = "A dashboard for my home"
license = "GPL-3.0"
readme = "README.md"
keywords = ["dashboard", "iced", "gstreamer", "icalendar"]
categories = ["desktop-application"]
repository = "https://github.com/cyl3x/home-control-panel"
authors = ["cyl3x <cyl3x@posteo.de>"]
version = "0.1.0"
edition = "2024"

[[bin]]
name = "home-control-panel"
path = "src/main.rs"

[profile.release]
codegen-units = 1
debug = false
lto = "fat"
opt-level = 3
strip = "debuginfo"

[dependencies]
async-channel = "2.5.0"
base64 = "0.22"
chrono = { version = "0.4.39", features = ["unstable-locales", "serde"] }
chrono-tz = "0.10.4"
clapper = { git = "https://gitlab.gnome.org/JanGernert/clapper-rs.git", rev = "3eb57f8a13d9e849d2f3df6d7fcf11362100ac5f" }
clapper-gtk = { git = "https://gitlab.gnome.org/JanGernert/clapper-rs.git", rev = "3eb57f8a13d9e849d2f3df6d7fcf11362100ac5f", features = ["gtk_v4_18"]}
env_logger = "0.11.8"
gtk = { package = "gtk4", version = "0.10.3", features = ["v4_18"] }
icalendar = "0.17.6"
log = { version = "0.4.29", features = ["kv", "kv_std"]}
palette = "0.7.6"
rrule = "0.14"
serde = { version = "1.0.217", features = ["derive"] }
toml = "0.9.8"
ureq = "3.1.4"
url = { version = "2.5.7", features = ["serde"] }
uuid = { version = "1.19.0", features = ["v5", "serde"] }
webkit6 = { version = "0.5.0", features = ["v2_50", "gtk_v4_18"] }
xmltree = "0.12.0"
